# pgsync_demo

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.pgsync  docker-compose.yml  postgres_bootstrap.sql
event_producer/: main.py
pg_sync/: entrypoint.sh  schema.json
